--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 		    <artifactId>selenium-java</artifactId>
 		    <version>4.1.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.5</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 
